# gow

./: .dockerignore  .env  .gitignore  .gitmodules  BUILD_GUIDE.md  CUSTOM_APP_INTEGRATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README  README.md  READY_TO_DEPLOY.md  VR_APP_CONFIG.toml  VR_SETUP_GUIDE.md  XFCE_DEV_CONFIG.toml  XFCE_ENHANCEMENT_SUMMARY.md  build-complete.sh  config.toml  docker-compose.yml  ensure-nvidia-xorg-driver.sh  gpu.Dockerfile  pulse.Dockerfile  retroarch.Dockerfile  run-gow  startup-gpu.sh  startup.sh  sunshine.Dockerfile  trigger-xfce-build.sh  user.env  xorg.Dockerfile  xvfb.Dockerfile
.github/: dependabot.yml
ansible/: README.md  headless-application.yaml  headless-default-1080.yaml  hosts.yaml  install-docker.yaml  run.sh  setup.yaml  tasks-allow-ports.yaml  tasks-clone-git-repo.yaml  tasks-reload-systemd-service.yaml
compose/: firefox.yml  headless.yml  host-dekstop.yml  lutris.yml  minecraft.yml  retroarch.yml  steam.yml
config/: common.env  intel.env  nvidia-primary-gpu.conf  nvidia.env  user.env  xorg.env
configs/: apps.json  retroarch.cfg  sunshine.conf  xorg-nvidia.conf
docker-lxc-daemon/: Makefile  go.mod  go.sum
docs/: Gemfile  README.md  _config.yml  antora.yml  components-overview.md  contributing.md  debian-instructions.md  desktop-instructions.md  docker-build.md  how-to-use.md  index.md  nvidia.md  overview.md  retroarch-first-start.md  roadmap.md  troubleshooting.md
env/: base.env  build.env  headless.env  host-desktop.env  nvidia.env  (+1 more)
tools/gow-status/: .env  Cargo.toml
tools/gow-status/src/: main.rs
(+421 files in other folders)
