[package]
name = "gow-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Docker Interactor
dockworker = "0.1.0"
# Command Line Argument Parser    
clap = { version = "4.0.30", features = ["derive", "unicode", "cargo"] }
dotenv = { version = "0.15.0", features = ["cli", "clap"] }
serde = "1.0.151"
serde_json = "1.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*